--- a/server/static/index.html
+++ b/server/static/index.html
@@ -82,6 +82,13 @@
                             <option value="software">Software Changes</option>
                         </select>
                     </div>
+                    <div class="filter-group">
+                        <label for="sort-filter">Sort By:</label>
+                        <select id="sort-filter" class="filter-select">
+                            <option value="newest">Newest</option>
+                            <option value="oldest">Oldest</option>
+                        </select>
+                    </div>
                     <button id="reset-filters" class="reset-button">Reset Filters</button>
                 </div>
             </div>
