--- a/server/static/node.html
+++ b/server/static/node.html
@@ -55,6 +55,13 @@
                             <option value="software">Software Changes</option>
                         </select>
                     </div>
+                    <div class="filter-group">
+                        <label for="node-sort-filter">Sort By:</label>
+                        <select id="node-sort-filter" class="filter-select">
+                            <option value="newest">Newest</option>
+                            <option value="oldest">Oldest</option>
+                        </select>
+                    </div>
                     <button id="node-reset-filters" class="reset-button">Reset Filters</button>
                 </div>
             </div>
